navbar-disconnect-icon: correct spacing of icon from main links

--- a/web-src/src/mystyles.scss
+++ b/web-src/src/mystyles.scss
@@ -430,7 +430,7 @@ hr.fd-navbar-divider {
 }
 
 .fd-navbar-icon {
-  width: 55px;
+  width: 3.25rem;
   align-items: center;
   display: flex;
   justify-content: center;
